*****************************************************************************************************
digiKam 5.2.0 - Release date: 2016-09-11

NEW FEATURES:

ImageEditor: digiKam editor and Showfoto plugins interface removed to reduce run-time dependancies and speed-up initialization.
Import     : new configuration options to support gPhoto2 PTP/IP cameras.
BQM        : New tool to detect and fix red-eyes automatically.

BUGFIXES FROM BUGZILLA:

001 ==> 366518 - Showfoto writes to wrong file when switching between images.
002 ==> 366542 - Build failure on i686.
003 ==> 365135 - Digikam 5 fails to build with DIGIKAMSC_COMPILE_DOC=on.
004 ==> 366630 - digiKam Not Responding if 'Right Click' on a empty area below the album lists.
005 ==> 366621 - Crash when performing Transformation resize operation.
006 ==> 366683 - Reverse Geottaging doesn't work on manually modified coordinates.
007 ==> 360528 - Digikam looks for digikamimageplugins in different directory than they were installed to.
008 ==> 365175 - Geolocation editing no long works in digikam 5.
009 ==> 366095 - Raw files not (always) properly decoded when using "raw data in half size" option for preview.
010 ==> 357617 - Batch rename fails when using custom file extensions.
011 ==> 366786 - Libraw fails to build with CLang (C++11 non constant initializer narrowing).
012 ==> 365727 - Thumbbar in editor should have a vertical scroll.
013 ==> 366626 - Video frame remains on screen even after moving to another item.
014 ==> 307839 - No import from automaticaly added smartphone.
015 ==> 