@@ -23,4 +23,5 @@ BUGFIXES FROM BUGZILLA:
 012 ==> 365727 - Thumbbar in editor should have a vertical scroll.
 013 ==> 366626 - Video frame remains on screen even after moving to another item.
 014 ==> 307839 - No import from automaticaly added smartphone.
-015 ==> 
+015 ==> 297459 - Cancel button doesn't work when items are being processed.
+016 ==> 
